# DildonicaFirmware

./: .gitignore  CMakeLists.txt  adafruit_itsybitsy_nrf52840.overlay  arduino_nano_33_ble.overlay  nrf52840dk_nrf52840.overlay  prj.conf
boards/: adafruit_itsybitsy_nrf52840.overlay  nrf52840dk_nrf52840.overlay
src/: bluetooth_cpp_compat.hpp  bluetooth_dildonica.cpp  bluetooth_dildonica.hpp  bluetooth_midi.cpp  bluetooth_midi.hpp  bluetooth_midi_service.cpp  bluetooth_peripheral_gatt.c  bluetooth_peripheral_gatt.cpp  circularbuffer.hpp  dildonica.cpp  dildonica.hpp  dildonica_midi.hpp  peripheral_gatt_write_midi.c
